This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.10.3 (UNRELEASED)
-------------------
Improvements:
 * data/apport-noui: A noninteractive frontend for automatic error
   reporting.

Bug fixes:
 * hookutils.py, attach_conffiles(): Fix check for inaccessible or modified
   conffiles. (LP: #1192899)

2.10.2 (2013-05-22)
-------------------
Bug fixes:
 * Resolve symlinks in file references in Python crash signatures.
   (LP: #1179979)
 * Fix endless loop of EOFErrors with broken core dumps. (LP: #1168849)
 * report.py, add_gdb_info(): Fix crash if gdb did not determine an assertion
   message. (LP: #1171484)
 * apt/dpkg: Fix get_file_package()'s "release" field to actually mean
   DistroRelease:, not a distro code name. This now requires a previous call to
   install_packages() with a configdir, which needs to have a file
   <configdir>/<release>/codename with the release's code name in it.
 * sandboxutils.py: Call get_file_package() with the report's release, so that
   we actually get files from the target release, not the host release.
 * test_hookutils.py: Don't assume that /etc/motd exists.

2.10.1 (2013-05-14)
-------------------
Bug fixes:
 * Fix ui.test_run_crash_anonymity_escaping test when running as root.
 * launchpad.py: Fix crash when trying to adjust a distro-only bug task if the
   bug also already has a distropackage task.
 * apt/dpkg: When there is no -dbg package, install all -dbg packages of the
   corresponding source package, and only then fall back to -dbgsym.
   (LP: #1003234)

2.10 (2013-04-30):
------------------
Improvements:
 * Support retracing foreign powerpc reports, thanks Steve Langasek.
 * apport/report.py: Generate a crash signature for suspend/resume failures.
 * hookutils.py: Add attach_upstart_logs(), thanks Steve Langasek.
 * hookutils.py, in_session_of_problem(): Port from ConsoleKit to logind.

Bug fixes: